attempt to fix #1
Didn't read this on the Nuxt page until now, apparently I should've done
this from the get go :P

--- a/.github/workflows/deploy-static.yml
+++ b/.github/workflows/deploy-static.yml
@@ -18,7 +18,7 @@ jobs:
       # Pick your own package manager and build script
       - run: npm install
         working-directory: ./tf2-chat-colouriser
-      - run: npx nuxt build --preset github_pages
+      - run: NUXT_APP_BASE_URL="https://vupulupu.github.io/tf2-chat-colouriser/" npx nuxt build --preset github_pages
         working-directory: ./tf2-chat-colouriser
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
