--- a/tf2-chat-colouriser/package.json
+++ b/tf2-chat-colouriser/package.json
@@ -13,5 +13,9 @@
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@vueuse/core": "^14.0.0",
+    "@vueuse/nuxt": "^14.0.0"
   }
 }
