--- a/tf2-chat-colouriser/package.json
+++ b/tf2-chat-colouriser/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-touch-events": "^5.0.13"
   },
   "devDependencies": {
     "@vueuse/core": "^14.0.0",
